[package]
name = "httping"
description = "Ping for HTTP/s"
version = "0.1.5"
edition = "2021"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/httping"
keywords = ["httping", "http", "ping", "ping-http"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.34"
bytes = "1.5.0"
