[package]
name = "httping"
description = "Ping for HTTP/s"
version = "0.1.9"
edition = "2021"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/httping"
keywords = ["httping", "http", "ping", "ping-http"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["json", "stream"] }
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.37"
bytes = "1.6.0"
